deploy/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: { { include "mychart.fullname" . } }
  labels: { { - include "mychart.labels" . | nindent 4 } }
spec:
  podSelector:
    matchLabels:
      app: { { include "mychart.fullname" . } }
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: api
          protocol: TCP
      from: { { - toYaml .Values.ingress.api | nindent 6 } }
  egress:
    # TODO: Limit egress traffic to ethereum-rpc.
    # Currently not possible to specify by domain name.
    - {} # Allow all
